force-app/main/default/objects/awduplicate2__awDCKeys__c/awduplicate2__awDCKeys__c.object-meta.xml
<CustomObject>
    <label>Duplicate Check Search Key</label>
    <nameField>
        <label>Duplicate Check Search Key Object Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Check Search Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>