force-app/main/default/objects/awduplicate2__awDCKeys__c/fields/awduplicate2__KeyA__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__KeyA__c</fullName>
    <defaultValue>&quot;||&quot;</defaultValue>
    <externalId>true</externalId>
    <label>Key A</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>