force-app/main/default/objects/awduplicate2__awDCKeys__c/fields/awduplicate2__RecordType__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__RecordType__c</fullName>
    <label>RecordType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>