force-app/main/default/objects/awduplicate2__awDCKeys__c/fields/awduplicate2__RecType__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2__RecType__c</fullName>
    <externalId>true</externalId>
    <label>RecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>